syntax = "proto3";

package auth;

option go_package = "api-grpc-gateway/protogen/golang";

import "auth/auth.proto";


service GatewayAuth {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserByID(GetUserRequest) returns (GetUserResponse);
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserResponse);
  rpc GetUserByEmailIsActive(GetUserByEmailRequest) returns (GetUserResponse);
}