syntax = "proto3";

package auth;

option go_package = "microserviceGo.auth.protogen;authv1";

service Auth {
  rpc ExtractUserIDFromToken (ExtractUserIDRequest) returns (ExtractUserIDResponse);
}
message ExtractUserIDRequest {
  string  access_token = 1; 
}

message ExtractUserIDResponse {
  string user_id = 1;
}